# django-cookiebanner

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  ruff.toml
cookiebanner/locale/de/LC_MESSAGES/: django.mo  django.po
cookiebanner/templates/cookiebanner/: bootstrap4.html  vanilla.html
cookiebanner/templatetags/: cookiebanner.py
tests/: manage.py  settings.py  test_urls.py  views.py
tests/templates/: base.html
