[tool.poetry]
name = "django-cookiebanner"
version = "0.2.8"
description = ""
authors = [
    "Andreas Nüßlein <andreas@sinnwerkstatt.com>",
    "Ralph Delfs <ralph.delfs@sinnwerkstatt.com>",
    "Christoph Zamaitat <christoph.zamaitat@sinnwerkstatt.com>",
]
readme = "README.md"
license = "GPL-3.0+"
repository = "https://github.com/sinnwerkstatt/django-cookiebanner"
keywords = ["django", "cookie", "gdpr", "dsgvo"]
include = ["CHANGELOG.md"]

packages = [
    { include = "cookiebanner" }
]

[tool.poetry.dependencies]
python = ">=3.8"
django = "~4.2"

[tool.poetry.dev-dependencies]
pytest-django = "*"
pytest-cov = "*"
black = "*"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | migrations
  | static-collected
  | node_modules
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
