[project]
name = "django-cookiebanner"
version = "0.2.8"
description = ""
authors = [
    { name = "Andreas Nüßlein", email = "andreas@sinnwerkstatt.com" },
    { name = "Ralph Delfs", email = "ralph.delfs@sinnwerkstatt.com" },
    { name = "Christoph Zamaitat", email = "christoph.zamaitat@sinnwerkstatt.com" },
]
requires-python = ">=3.8"
readme = "README.md"
license = "GPL-3.0+"
keywords = [
    "django",
    "cookie",
    "gdpr",
    "dsgvo",
]
dependencies = ["django>=4.2"]

[project.urls]
Repository = "https://github.com/sinnwerkstatt/django-cookiebanner"

[dependency-groups]
dev = [
    "pytest-django",
    "pytest-cov",
    "black",
    "ruff>=0.12.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "cookiebanner",
    "CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
include = [
    "cookiebanner",
    "CHANGELOG.md",
]
